--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "nodemon": "^1.18.9"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "apollo-boost": "^0.4.9",
+    "cross-fetch": "^3.0.5",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.3.0",
+    "node-fetch": "^2.6.1"
   }
 }
